fix (deploy) : sửa lỗi cors ở review